<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".CreateNoteActivity">

    <ScrollView
        android:id="@+id/createNoteView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/titre_de_la_note"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:fontFamily="@font/gilroy_black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"/>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/tapez_votre_texte"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>